# langbuddy

./: .gitignore  Cargo.toml  TODO.mkd  roadmap.mkd
src/: browser_session.rs  constants.rs  content.rs  filesystem.rs  flashcard.rs  flashcard_deck.rs  langbuddy.rs  main.rs  parser.rs  preserver.rs  repl.rs  terminal.rs  ui.rs  word.rs  word_reference_scraper.rs
