[package]
name = "memorizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
chrono = "0.4.31"
fantoccini = "0.19.3"
headless_chrome = { version = "1.0.8", features = ["fetch"] }
reqwest = "0.11.23"
scraper = "0.18.1"
tokio = { version = "1.35.1", features = ["full"] }
